(lang dune 3.10)

(name ocaml_problems)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Aidan Tilgner")

(maintainers "Aidan Tilgner")

(license MIT)

(package
 (name ocaml_problems)
 (synopsis "My solutions to the OCaml excersizes")
 (description "My solutions to the OCaml excersizes on the https://ocaml.org/problems page.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
